style.css
/* Overrides */

html {
    color: white;
    font-size: 1.5vh;
    font-family: 'Roboto Condensed', sans-serif;
    overflow: hidden;
}

body {
    margin: 0px;
    overflow: hidden;
}

h3 {
    margin: 0.5rem 0rem 0.5rem 0rem;
}

hr {
    border: 1px solid #3f4550;
}

img {
    width: 100%;
    height: 100%;
    object-fit: contain;
}

button {
    border: none;
    border-radius: 5px;

    font-size: 1rem;
    cursor: pointer;
    color: white;
    background-color: #2B2F36;
}
button:hover {
    background-color: orange;
    box-shadow: 0px 0px 15px -3px orange;
}
button:focus {
    outline: none;
}

*::-webkit-scrollbar {
    width: 0.75rem;
    height: 0.75rem;
    background-color: #2B2F36;
}
*::-webkit-scrollbar-thumb {
    background-color: orange;
}

input[type=range] {
    -webkit-appearance: none;
    width: 40%;
    height: 0.75rem;
    background: #2B2F36;
    outline: none;
}
input[type=range]::-webkit-slider-thumb {
    -webkit-appearance: none;
    appearance: none;
    width: 0.75rem;
    height: 0.75rem;
    background: orange;
    cursor: pointer;
}
input[type=range]::-moz-range-thumb {
    border-radius: 0px;
    width: 0.75rem;
    height: 0.75rem;
    background: orange;
    cursor: pointer;
}

/* Main elements */

nav {
    width: 300%;
    height: 3rem;
    background-color: #1f2227;
}
nav * {
    display: inline-block;
    text-decoration: none;
    color: white;
    font-size: 1rem;
    line-height: 1em;
}
nav button {
    height: 1.6rem;
    margin: 0.7rem 0.3rem;
    padding: 0.3rem;
}
nav a {
    height: 1rem;
    margin: 1rem 0.3rem;
}
nav .logo {
    height: 1.6rem;
    margin: 0.7rem 1rem;
    font-size: 1.6rem;
    color: orange;
}

main {
    width: 100%;
    height: calc( 100vh - 3rem );
}

/* Sections */

#helpbox {
    position: absolute;
    left: 15%;
    top: 15%;
    width: 70%;
    
    box-sizing: border-box;
    padding: 1rem;
    z-index: 101;
    border-radius: 1rem;
    border: 2px solid orange;
    background-color: #1f2227;
    overflow: hidden;
    font-size: 1.5rem;
    visibility: hidden;
}

#code {
    position: absolute;
    left: 0px;
    top: 3rem;
    width: calc( 100vw - 50vh );
    height: calc( ( 100vh - 3rem ) * 0.75 );

    box-sizing: border-box;
    padding: 1rem;
    background-color: #2B2F36;
    font-family: Consolas, Menlo, Monaco, "Lucida Console";
    font-size: 1.2rem;

    overflow: hidden;
}
@media (orientation: portrait) {
    #code {
        top: calc( 3rem + 50vw );
        width: 100vw;
        height: calc( ( 100vh - 3rem - 50vw ) * 0.75 );
    }
}
#codearea {
    width: 100%;
    height: 100%;
}
.CodeMirror {
    width: 100%;
    height: calc( 100% - 3rem );
}
.CodeMirror-lines {
    padding: 0;
}
.CodeMirror-scrollbar-filler { /* scrollbar intersect */
    background-color: #2B2F36;
}

#console {
    position: absolute;
    left: 0px;
    bottom: 0px;
    width: calc( 100vw - 50vh );
    height: calc( ( 100vh - 3rem ) * 0.25 );

    box-sizing: border-box;
    padding: 1rem;
    border-right: 2px solid #2B2F36;
    background-color: #1f2227;
    overflow: hidden;

    z-index: 5;
}
@media (orientation: portrait) {
    #console {
        bottom: 0px;
        width: 100vw;
        height: calc( ( 100vh - 3rem - 50vw ) * 0.25 );
    }
}
#consoleTray {
    height: 90%;
    overflow-y: scroll;
}
.consoleEntry {
    padding: 0.25rem;
    border-bottom: 1px solid #2B2F36;
}
.consoleStamp {
    display: inline-block;
    color: dimgrey;
    margin-right: 1rem;
}
.consoleMessage {
    display: inline-block;
    color: white;
}

#canvas {
    position: absolute;
    right: 0px;
    top: 3rem;
    width: 50vh;
    height: 50vh;
}
@media (orientation: portrait) {
    #canvas {
        right: 0px;
        top: 3rem;
        width: 50vw;
        height: 50vw;
    }
}

#settings {
    position: absolute;
    right: 0px;
    bottom: 0px;
    width: 50vh;
    height: calc( 50vh - 3rem );

    box-sizing: border-box;
    padding: 1rem;
    background-color: #1f2227;
}
@media (orientation: portrait) {
    #settings {
        left: 0px;
        top: 3rem;
        width: 50vw;
        height: 50vw;
    }
}

/* Common */

.gap { width: 2rem }
.flex { display: flex; }

.left { float: left; }
.right { float: right; }

.w25p { width: 25%; }
.w40p { width: 40%; }
.w50p { width: 50%; }
.w60p { width: 60%; }
.w75p { width: 75%; }
.w100p { width: 100%; }

.h25p { height: 25%; }
.h50p { height: 50%; }
.h75p { height: 75%; }
.h100p { height: 100%; }

